--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class=" text-center">
                 <img src="./image.jpg" alt="calculator picture">
             </div>
+            <!-- calculation section  -->
             <div class="bg-gray-100">
                 <div class="flex flex-col items-center justify-center gap-3">
 
